force-app/main/default/objects/KeyResult__c/fields/CurrentValue__c.field-meta.xml
<CustomField>
    <fullName>CurrentValue__c</fullName>
    <label>Current Value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>