force-app/main/default/objects/KeyResult__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Key Results</relationshipLabel>
    <relationshipName>Key_Results</relationshipName>
    <type>Lookup</type>
</CustomField>