force-app/main/default/objects/KeyResult__c/fields/TargetNumber__c.field-meta.xml
<CustomField>
    <fullName>TargetNumber__c</fullName>
    <label>Target number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>