force-app/main/default/objects/KeyResult__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <required>true</required>
    <type>Date</type>
</CustomField>